--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-helmet-async": "^1.0.3",
     "@types/react-query": "^1.2.9",
+    "@types/react-responsive": "^8.0.8",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.29",
     "framer-motion": "^10.16.4",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.48.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
