--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.io/parkyangji/netflex-clone/",
   "name": "netflex-clone",
   "version": "0.1.0",
   "private": true,
@@ -59,6 +60,5 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-  },
-  "homepage": "https://github.com/parkyangji/netflex-clone/"
+  }
 }
